# yolo26m_BoTSORT-reID_Qwenvl4B-Locate-Anything3B

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  commands.txt  conftest.py  docker-compose.yml  pyproject.toml  pytest.ini  sitecustomize.py
configs/: README.md  adaptive_tracking.yaml  audit.yaml  base.yaml  benchmark.yaml  benchmark_smoke.yaml  botsort_reid.yaml  bytetrack.yaml  compare_trackers.yaml  compare_trackers_smoke.yaml  compare_trackers_yolo26m_botsort.yaml  compare_trackers_yolo26m_botsort_all.yaml  compare_trackers_yolo26m_botsort_hard_identity.yaml  compare_trackers_yolo26m_botsort_identity_stable_all.yaml  compare_trackers_yolo26m_botsort_no_reid_all.yaml  compare_trackers_yolo26m_bytetrack_all.yaml  data.yaml  data_test.yaml  detection_cache.yaml  detection_cache_smoke.yaml  detection_cache_yolo26m.yaml  detection_cache_yolo26m_all.yaml  project.yaml  raw_video_semantic_input_video1.yaml  render_video_smoke.yaml  report.yaml  report_smoke.yaml  sort.yaml  track_sportsmot.yaml  track_sportsmot_smoke.yaml  track_video.yaml  track_video_vlm_guided.yaml  track_video_yolo26m_botsort.yaml  track_video_yolo26m_pretrained_person_botsort_high_recall.yaml  track_yolo26m_botsort.yaml  tracker_ablation.yaml  tracker_grid_botsort_reid.yaml  tracker_grid_botsort_reid_hard_identity.yaml  tracker_grid_botsort_reid_hard_identity_strict.yaml  trackeval.yaml  (+11 more)
data/: README.md
demo/: demo.ps1  demo.sh
docs/: PROJECT_STRUCTURE.md  detector_finetuning.md  domain_optimization.md  vlm_qwen4b_pipeline.md
legacy/: README.md
outputs/: README.md
requirements/: base.txt  data.txt  dev.txt  vlm.txt  (+2 more)
(+751 files in other folders)
