[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "football-tracking"
version = "0.1.0"
description = "Reusable YOLO detection, multi-object tracking, TrackEval evaluation, and Qwen VLM analysis pipeline."
readme = "README.md"
requires-python = ">=3.12,<3.13"
classifiers = [
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "PyYAML",
]

[project.scripts]
football-tracking = "football_tracking.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -p no:cacheprovider"

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = ["data/downloads"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
